--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: C
 compiler: gcc
 
-build:
-  - gcc main.c HashArray.c LinkedList.c -o main
+script: gcc main.c HashArray.c LinkedList.c -o main
   - ./main
