--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: C
 compiler: gcc
 
-script: gcc main.c HashArray.c LinkedList.c -o main
+script:
+  - gcc main.c HashArray.c LinkedList.c -o main
   - ./main
