--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: C
-compiler: clang 4.0
+compiler: gcc
 
+script: gcc main.c HashArray.c LinkedList.c -o main
 script:
-  - clang -coverage -O0 main.c HashArray.c LinkedList.c -o main
+  - gcc main.c HashArray.c LinkedList.c -o main
   - ./main
-  - gcov main.c
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
