--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: C
 compiler: gcc
 
 script:
-  - gcc -coverage main.c HashArray.c LinkedList.c -o main
+  - gcc main.c HashArray.c LinkedList.c -o main
   - ./main
 
   after_success:
